--- a/views/attendance.html
+++ b/views/attendance.html
@@ -233,7 +233,7 @@ footer p {
 </div>
 
 <div class="bigger">
-    <form class="formi" method="post" action="https://script.google.com/macros/s/AKfycbyHU0xQ4B-vF0iugWrxe3VihowAzQLOPG2J7IK3xNNOJluzRKlGXwa-1kXg4si0BSFS/exec">
+    <form class="formi" method="post" action="https://script.google.com/macros/s/AKfycbyHU0xQ4B-vF0iugWrxe3VihowAzQLOPG2J7IK3xNNOJluzRKlGXwa-1kXg4si0BSFS/exec" onsubmit="handleSubmission(event) ; to_trim()">
 
         <div class="row mb-3">
             <label for="inputEmail3" class="col-sm-2 col-form-label"><h5 style="padding-right: 23vw ; font-size: 0.9vw ; color: lightpink ; font-family: Verdana">Name</h5></label>
@@ -262,10 +262,29 @@ footer p {
 </div>
 </div>
   
-<script >function upperCase(){
+<script >
+function upperCase(){
    let element = document.getElementById('inputPassword3');
    element.value = element.value.toUpperCase();
-    }</script>
+    }
+    
+ function to_trim() {
+      let name = document.getElementById('inputEmail3') ;
+      let enrollment_no = document.getElementById('inputPassword3') ;
+      name.value = name.value.trim() ;
+      enrollment_no.value = enrollment_no.value.trim() ;
+ }   
+
+ function handleSubmission(){
+        
+        
+        const submitButton = document.getElementById('btbt');
+        submitButton.disabled = true;
+        
+        // Proceed with form submission
+        event.target.submit();
+    }
+    </script>
 
 
 
