--- a/views/login.html
+++ b/views/login.html
@@ -13,15 +13,16 @@
         background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
         color: #fff;
         display: flex;
-        justify-content: center;
-
+        align-items: center;
+        flex-direction: column;
         height: 100vh;
     }
     .container{
         width: fit-content;
         border: 5px solid black;
         border-radius: 7px;
-        margin-top : 7.8vw ;
+        margin-top: 7.8vw;
+        margin-bottom: 7vw ;
         height: fit-content;
     }
     #form{
@@ -38,25 +39,49 @@
         transform: translateY(-6px);
         transition-duration: 1.3s;
     }
+    h3{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
 </style>
 <body>
 <div class="container">
-    <form action="/loginaction" method="POST" id="form">
-        <div class="mb-3" >
+    <form action="/loginaction" method="POST" id="form" onsubmit="trimInputFields()">
+        <div class="mb-3" style="height: fit-content;">
             <label for="exampleInputEmail1" class="form-label" >Username</label>
             <input type="text" class="form-control" name = "loginemail" id="exampleInputEmail1" aria-describedby="emailHelp" required>
 
         </div>
-        <div class="mb-3">
+        <div class="mb-3" >
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" name = "loginpass" required>
         </div>
-        <div class="mb-3 form-check">
 
-
-        </div>
-        <button  type="submit"  class="btn btn-primary">Login</button>
+        
+        <button  type="submit"  class="btn btn-primary">Login</button> <br><br>
+        
     </form>
+    <form>
+        New User ? <button class="btn btn-dark" formaction="/signup">SignUp</button>
+     </form>
 </div>
+
+<div class="footer" style="border 3px solid "></div>
+    <h3> Made with <img src="./love_12891321.png" height="20px"> by Surya </h3>
+</div>
+
+<script>
+    function trimInputFields() {
+        // Get the input elements
+        const username = document.getElementById('exampleInputEmail1');
+        const password = document.getElementById('exampleInputPassword1');
+       
+
+        // Trim the leading and trailing spaces
+        username.value = username.value.trim();
+        password.value = password.value.trim();
+        
+    }
+</script>
+
 </body>
 </html>
